03. supervise.c: fixed waitpid returning EINVAL on OSX
04. supervise.c: disable warning message if pid does not exist
05. svscan.c: turn on verbose, silent using env variables VERBOSE, SILENT
- 01/07/2023
06. minisvc.in: skip indimail-mta variables when creating svscan service
- 22/07/2023
07. docker-entrypoint: removed redundant inlookup fix of creating named pipes
08. runpod: Fixed typo

* Sun Apr 23 2023 17:05:00 +0000 Manvendra Bhangui <daemontools@indimail.org> 1.1.2-1.1%{?dist}
Release 1.1.2-1.1 Start 20/02/2023 End 23/04/2023
======= Release Highlights ================================================
o terminate all childs if TERMINATE_SESSION is set
o set process group of child when SETGPID is set
o set sticky bit on run file to run in subreaper mode
===========================================================================
- 20/02/2023
01. setuidgid.c: moved set_additional_groups function to libqmail
- 04/03/2023
02. run_init.c: return -1 for name too long
03. supervise.c: disable using /run if DISABLE_RUN env variable is set
04. svok.c, svc.c, svstat.c: check for supervise/ok in original service dir
    before run filesystem
05. svscan.c: unset use_run if /run, /var/run is missing
06. svscan.c: skip directories starting with .
07. supervise.c: cleanup supervise directory in service directory when using
    run fs
- 05/03/2023
08. svscan.c: use TERMINATE_SESSION to terminate all children when running as
    session leader
09. supervise.c: added exiting informational message
10. svscan.c: check for dup2 errors.
- 06/03/2023
11. supervise.c: fix termination by svc in subreaper mode
12. supervise.c: handle SIGTERM to exit and terminate child
13. supervise.c: set Process Group ID of child when SETPGID env variable is
    set
- 07/03/2023
14. supervise.c: check for sticky bit on run on every restart
- 13/03/2023
15. svps: added -t, --term option
16. installer.c: changed string warning: to warn:
17. qmailctl: supress echo when not running on terminal