@@ -16,6 +16,9 @@ Release @version@-@release@ Start 27/04/2023 End XX/XX/XXXX
 - 22/07/2023
 07. docker-entrypoint: removed redundant inlookup fix of creating named pipes
 08. runpod: Fixed typo
+- 26/07/2023
+08. svps.in: display svscan not running if svscan is not up
+09. docker_entrypoint.sh: use start_apache2 for openSUSE tumbleweed
 
 * Sun Apr 23 2023 17:05:00 +0000 Manvendra Bhangui <daemontools@indimail.org> 1.1.2-1.1%{?dist}
 Release 1.1.2-1.1 Start 20/02/2023 End 23/04/2023
